--- a/SDL_GetRenderDrawColor.mediawiki
+++ b/SDL_GetRenderDrawColor.mediawiki
@@ -43,8 +43,8 @@ You can add your code example here
 ''You can add useful comments here''
 
 == Related Functions ==
-:[[SDL_RenderRect]]???
-:[[SDL_RenderRects]]???
+:[[SDL_RenderDrawRect]]???
+:[[SDL_RenderDrawRects]]???
 :[[SDL_SetRenderDrawColor]]
 
 ----
