--- a/SDL_RenderDrawRect.mediawiki
+++ b/SDL_RenderDrawRect.mediawiki
@@ -5,7 +5,7 @@
 |}
 
 = SDL_RenderDrawRect =
-Use this function to fill the current rendering target with the drawing color.
+Use this function to draw a rectangle on the current rendering target with the drawing color.
 
 
 == Syntax ==
@@ -16,7 +16,7 @@ int SDL_RenderDrawRect(const SDL_Rect* rect)
 == Function Parameters ==
 {|
 |'''rect'''
-|a pointer to the destination ,,rectangle,, ^[[SDL_Rect]]^, or NULL for the entire rendering target
+|a pointer to the destination ,,rectangle,, ^[[SDL_Rect]]^, or NULL to outline the entire rendering target
 |}
 
 == Return Value ==
