--- a/SDL_ShowWindow.mediawiki
+++ b/SDL_ShowWindow.mediawiki
@@ -8,12 +8,12 @@ Use this function to show the window.
 
 == Syntax ==
 ```c++
-void SDL_ShowWindow(SDL_WindowID windowID)
+void SDL_ShowWindow(SDL_Window* window)
 ```
 
 == Function Parameters ==
 {|
-|'''windowID'''
+|'''window'''
 |the window to be shown
 |}
 
