--- a/SDL_SetWindowTitle.mediawiki
+++ b/SDL_SetWindowTitle.mediawiki
@@ -8,13 +8,13 @@ Use this function to set the title of the window, in UTF-8 format.
 
 == Syntax ==
 ```c++
-void SDL_SetWindowTitle(SDL_WindowID windowID,
-                        const char*  title)
+void SDL_SetWindowTitle(SDL_Window* window,
+                        const char* title)
 ```
 
 == Function Parameters ==
 {|
-|'''windowID'''
+|'''window'''
 |the type used to identify the window
 |-
 |'''title'''
