--- a/SDL_MaximizeWindow.mediawiki
+++ b/SDL_MaximizeWindow.mediawiki
@@ -8,12 +8,12 @@ Use this function to make the window as large as possible.
 
 == Syntax ==
 ```c++
-void SDL_MaximizeWindow(SDL_WindowID windowID)
+void SDL_MaximizeWindow(SDL_Window* window)
 ```
 
 == Function Parameters ==
 {|
-|'''windowID'''
+|'''window'''
 |the window to be maximized
 |}
 
