--- a/SDL_GetWindowPosition.mediawiki
+++ b/SDL_GetWindowPosition.mediawiki
@@ -8,14 +8,14 @@ Use this function to get the position of the window.
 
 == Syntax ==
 ```c++
-void SDL_GetWindowPosition(SDL_WindowID windowID,
-                           int*         x,
-                           int*         y)
+void SDL_GetWindowPosition(SDL_Window window,
+                           int*        x,
+                           int*        y)
 ```
 
 == Function Parameters ==
 {|
-|'''windowID'''
+|'''window'''
 |the type used to identify the window
 |-
 |'''x'''
