--- a/SDL_GetWindowData.mediawiki
+++ b/SDL_GetWindowData.mediawiki
@@ -8,15 +8,15 @@ Use this function to retrieve the data pointer associated with the window.
 
 == Syntax ==
 ```c++
-void* SDL_GetWindowData(SDL_WindowID windowID)
+void* SDL_GetWindowData(SDL_Window* window)
 ```
 
 == Return Value ==
-*is there a RV for void*?  The pointer is passed to the callback function.???*
+*is there a RV for void*?  The pointer is passed to the callback function.???
 
 == Function Parameters ==
 {|
-|'''windowID'''
+|'''window'''
 |the type used to identify the window
 |}
 
