--- a/SDL_CreateWindow.mediawiki
+++ b/SDL_CreateWindow.mediawiki
@@ -7,7 +7,7 @@ Use this function to create a window with the specified position, dimensions, an
 
 == Syntax ==
 ```c++
-SDL_WindowID SDL_CreateWindow(const char* title,
+SDL_Window* SDL_CreateWindow(const char* title,
                               int         x,
                               int         y,
                               int         w,
