--- a/SDL_UnlockTexture.mediawiki
+++ b/SDL_UnlockTexture.mediawiki
@@ -10,13 +10,13 @@ Use this function to unlock a texture, uploading the changes to video memory, if
 
 == Syntax ==
 ```c++
-void SDL_UnlockTexture(SDL_TextureID textureID)
+void SDL_UnlockTexture(SDL_Texture* texture)
 ```
 
 == Function Parameters ==
 
 {|
-|'''textureID'''
+|'''texture'''
 |the texture locked by [[SDL_LockTexture]]() that is to be unlocked
 |}
 
