--- a/SDL_SetTextureBlendMode.mediawiki
+++ b/SDL_SetTextureBlendMode.mediawiki
@@ -7,13 +7,13 @@ Use this function to set the blend mode for a texture, used by [[SDL_RenderCopy]
 
 == Syntax ==
 ```c++
-int SDL_SetTextureBlendMode(SDL_TextureID textureID,
-                            int           blendMode)
+int SDL_SetTextureBlendMode(SDL_Texture* texture,
+                            int          blendMode)
 ```
 
 == Function Parameters ==
 {|
-|'''textureID'''
+|'''texture'''
 |the texture to update
 |-
 |'''blendMode'''
