--- a/SDL_SetTextureAlphaMod.mediawiki
+++ b/SDL_SetTextureAlphaMod.mediawiki
@@ -10,13 +10,13 @@ Use this function to set an additional alpha value used in render copy operation
 
 == Syntax ==
 ```c++
-int SDL_SetTextureAlphaMod(SDL_TextureID textureID,
-                           Uint8         alpha)
+int SDL_SetTextureAlphaMod(SDL_Texture* texture,
+                           Uint8        alpha)
 ```
 
 == Function Parameters ==
 {|
-|'''textureID'''
+|'''texture'''
 |the texture to update
 |-
 |'''alpha'''
