--- a/SDL_RenderCopy.mediawiki
+++ b/SDL_RenderCopy.mediawiki
@@ -7,14 +7,14 @@ Use this function to copy a portion of the texture to the current rendering targ
 
 == Syntax ==
 ```c++
-int SDL_RenderCopy(SDL_TextureID   textureID,
+int SDL_RenderCopy(SDL_Texture*    texture,
                    const SDL_Rect* srcrect,
                    const SDL_Rect* dstrect)
 ```
 
 == Function Parameters ==
 {|
-|'''textureID'''
+|'''texture'''
 |the source texture; see [[#Remarks|Remarks]] for details
 |-
 |'''srcrect'''
