--- a/SDL_DestroyTexture.mediawiki
+++ b/SDL_DestroyTexture.mediawiki
@@ -7,12 +7,12 @@ Use this function to destroy the specified texture.
 
 == Syntax ==
 ```c++
-void SDL_DestroyTexture(SDL_TextureID textureID)
+void SDL_DestroyTexture(SDL_Texture* texture)
 ```
 
 == Function Parameters ==
 {|
-|'''textureID'''
+|'''texture'''
 |the texture to destroy
 |}
 
