Update TextureID > Texture*

--- a/SDL_CreateTexture.mediawiki
+++ b/SDL_CreateTexture.mediawiki
@@ -7,10 +7,10 @@ Use this function to create a texture for the current rendering context.
 
 == Syntax ==
 ```c++
-SDL_TextureID SDL_CreateTexture(Uint32 format,
-                                int    access, 
-                                int    w,
-                                int    h)
+SDL_Texture* SDL_CreateTexture(Uint32 format,
+                               int    access, 
+                               int    w,
+                               int    h)
 ```
 
 == Function Parameters ==
