--- a/SDL_TextureModulate.mediawiki
+++ b/SDL_TextureModulate.mediawiki
@@ -25,6 +25,9 @@ You can add your code example here
 == Remarks ==
 ''You can add useful comments here''
 
+== Related Structures ==
+:[[SDL_RendererInfo]]
+
 == Related Functions ==
 :[[SDL_RenderCopy]]
 
