--- a/APIContributionStyleGuide.mediawiki
+++ b/APIContributionStyleGuide.mediawiki
@@ -16,7 +16,18 @@ If you would like to contribute to or edit other sections, more detailed instruc
 Please email docs@libsdl.org to request permission.  
 
 
-== Adding Code Examples ==
+== Getting Started ==
+If a page can be edited you will see two options in the left column to choose from:
+ 1. Edit (Text)
+  Use the Text editor to see the existing markup.  You will need to use the Preview feature to view the content as it will appear.  The Text editor provides more power/flexibility for editing but requires that you know the wiki markup.
+ 1. Edit (GUI)
+  Use the GUI editor to see the content appear roughly as it would on the screen as you edit.  The GUI editor provides buttons and shortcuts, much like a simple word processor, to add formatting markup such as bolding text.  It is simpler to use but does not provide all the options that the Text editor does.
+* ''Suggestions'':  If you are familiar with the wiki markup or are simply pasting your content in you will likely find the Text editor more to your liking.<br/> If you are not familiar with the wiki markup or are adding content that will require formatting you will likely find the GUI editor more to your liking.<br/>  You can find more information about wiki markup at [http://wiki.libsdl.org/moin.cgi/HelpOnEditing wiki help documentation].
+
+== The Basics ==
+
+== The Specifics ==
+=== Adding Code Examples ===
 
 {OK} Please post code examples showing how you have used a function that may benefit other users.  
 * Do not post anything that you do not have permission to post publicly.
@@ -33,4 +44,9 @@ Please email docs@libsdl.org to request permission.
 ```
 }}}}
 
-== Adding Remarks ==
+=== Adding Remarks ===
+
+== Ready To Save ==
+When you have completed your additions you will find Save Changes and Preview options in the left column.
+* Preview will provide a draft view of the page as it will appear on the screen but it does not save your changes.  If you are happy with the result in the Preview you will still need to Save Changes.  
+* When you save your changes please include a comment that summarizes what you have done.
